# Alpaca-StochRSI-EMA-Trading-Bot

./: .aiconfig  .dockerignore  .env.development  .env.example  .env.runtime  .env.security  .gemini-config.json  .gitignore  .pre-commit-config.yaml  .project-config.json  AGENTS.md  ARCHITECTURE-DIAGRAM.md  BMAD-STATUS.md  BOT-STATUS-REPORT.md  CHART_FIXING_GUIDE.md  CLAUDE.md  COMPLETE-TESTING-SUMMARY.md  CONFIG_STRUCTURE.md  CRUSH.md  CRYPTO-247-TRADING-GUIDE.md  CRYPTO_TAB_INSTRUCTIONS.md  DASHBOARD-QUICKSTART.md  DEPLOYMENT_QUICK_GUIDE.md  Dockerfile  ENHANCED_RISK_MANAGEMENT_SUMMARY.md  EPIC1_DEPLOYMENT_SUCCESS.md  FLASK_INTEGRATION_GUIDE.md  FUNCTIONAL-TESTING-GUIDE.md  GEMINI.md  INTEGRATED-BOT-GUIDE.md  Makefile  PHASE_1_COMPLETION_REPORT.md  PRD.md  Procfile  README.md  README_TRADING_ACADEMY.md  REALTIME_CANDLESTICK_FIX.md  REALTIME_FEATURES.md  SECURITY_IMPLEMENTATION.md  SOURCE_TREE.md  (+91 more)
.bmad/: config.yml  status.json
AUTH/: ConfigFile.txt  Tickers.txt  authAlpaca.txt
api/: __init__.py  bmad_status_routes.py  dashboard_data_api.py  enhanced_chart_routes.py  fixed_chart_endpoints.py  github_integration_routes.py  historical_chart_routes.py  realtime_data_routes.py  simple_chart_endpoint.py
app/: __init__.py  error_handlers.py
backend/: __init__.py
backtesting/: backtesting_engine.py  enhanced_backtesting_engine.py  strategies.py  visualization.py
config/: alpaca.json  config.py  config.yml  config_manager.py  config_original.py  database.json  debug_config.py  environment.py  github_integration_config.py  indicators.json  logging.json  notifications.json  performance.yml  performance_config.py  ports.py  production_config.py  runtime_dependencies.py  service_ports.py  service_settings.py  timeframe.json  trading.json  ui.json  unified_config.py  unified_config.yml
core/: __init__.py  alpaca_data_service.py  database_position_manager.py  position_reconciler.py  resilience.py  resilient_client.py  scanner_service.py  service_registry.py  signal_filters.py  stubs.py
database/: __init__.py  database_manager.py  models.py  trading_data.db-shm
docker/: nginx.conf  redis.conf
docs/: CHART_FIXES_SUMMARY.md  CHART_OPTIMIZATION_COMPLETE.md  COMMON_ISSUES_AND_FIXES.md  COMPLETE_TRADING_DASHBOARD.md  CONSOLE_ERRORS_FIXED.md  CRYPTO_BOT_FIX_SUMMARY.md  CRYPTO_SERVICE_FIX.md  IMPLEMENTATION_ROADMAP.md  LIVE_TRADE_FEED_IMPLEMENTATION.md  LIVE_TRADE_FEED_REQUIREMENTS.md  MCP_REF_SETUP_COMPLETE.md  MCP_SETUP.md  MCP_TRADING_INTEGRATION_GUIDE.md  MCP_WORKFLOW_EXAMPLES.md  MICROSERVICES_ARCHITECTURE.md  MICROSERVICES_QUICK_START.md  NAVIGATION_GUIDE.md  PROJECT_BRIEF.md  PROJECT_DOCUMENTATION.md  README.md  REAL_DATA_IMPLEMENTATION.md  REF_TOOLS_MCP_SETUP.md  ROADMAP_ITERATION_2.md  RUNTIME_ERRORS_FIXED.md  SCALPING_ARCHITECTURE_BEST_PRACTICES.md  SCALPING_DASHBOARD_IMPLEMENTATION.md  SHADCN_UI_SETUP.md  SYSTEM_ARCHITECTURE.md  SYSTEM_STATUS_REPORT.md  TRADING_BOTS_IMPLEMENTATION.md  TRADING_STRATEGIES.md  WEBSOCKET_IMPLEMENTATION.md  WORKING_COMPONENTS_ANALYSIS.md  crypto_scalping_system_roadmap.md  local_runtime.md  sandbox_deployment.md
education/: ai_trading_assistant.py  educational_dashboard.py  indicator_academy.py  strategy_builder.py
frontend/: config.js  crypto-dashboard.html  dashboard.html  index.html  script.js  style.css
frontend-shadcn/: .env.example  FINAL_TEST_SUCCESS.md  PERFORMANCE_ANALYSIS_REPORT.md  PERFORMANCE_FIXES_APPLIED.md  PLAYWRIGHT_TEST_METRICS.md  TESTING_CHECKLIST.md  TEST_FIXES_SUMMARY.md  TEST_REPORT.md  UPDATED_TEST_REPORT.md  next.config.js  package-lock.json  package.json  playwright.config.ts  tailwind.config.ts  test-metrics-full.json
indicators/: __init__.py  optimized_indicators.py  stoch_rsi_enhanced.py  supertrend.py  volume_analysis.py
logs/: .gitkeep
memory/: memory-store.json
microservices/: .env.example  README.md  docker-compose.yml  quick_start.py  requirements.txt  requirements_simple.txt  setup_local_dev.py  setup_with_venv.py  start_all_services.py  start_microservices.py  start_service.sh  start_working_services.py  test_microservices.py
ml_models/: __init__.py  adaptive_algorithms.py  price_predictor.py  reinforcement_learning.py
playwright-report/: index.html
requirements/: strategy-runtime.txt
risk_management/: enhanced_risk_manager.py  position_sizer.py  risk_config.py  risk_config.yml  risk_config_aggressive.yml  risk_config_conservative.yml  risk_config_moderate.yml  risk_middleware.py  risk_models.py  risk_service.py  trailing_stop_manager.py
scripts/: afterhours_simulation.py  automated_daytrading_bot.py  check_crypto_positions.py  check_env.py  check_learning_stats.py  check_positions.py  check_real_account.py  check_secrets.py  compose_down.sh  compose_up.sh  configure_ref_tools_mcp.sh  debug_frontend.html  demo_dynamic_stoch_rsi.py  demo_microservices.py  deploy_epic1.py  dev-setup.sh  diagnose_trading_issues.py  display-bmad-status.sh  fix_api_routes.py  fix_charts.py  fix_dashboard_data.py  fix_dashboard_simple.py  force_crypto_trade.py  mcp_trading_integration.js  mcp_trading_integration.py  migrate.py  quick_status_check.py  risk_worker.py  run_all.sh  run_crypto_tests.sh  run_fix_validation.sh  run_functional_tests.sh  run_mcp_trading_demo.py  run_scalping_bot.py  sentiment_worker.py  signal_gateway.py  start_core_services.py  start_frontend_dashboard.sh  start_localhost_services.py  start_mcp_trading.sh  (+19 more)
services/: README.md  async_data_fetcher.py  backtesting_service.py  circuit_breaker.py  data_service.py  database_abstraction.py  epic2_backtesting_engine.py  historical_data_service.py  memory_cache.py  ml_service.py  performance_optimizer.py  position_manager.py  position_tracker.py  redis_cache_service.py  risk_api_app.py  scalp_algo.py  signal_processor.py  trading_executor.py  unified_data_manager.py  websocket_manager.py
src/: backend_api_fixes.py  enhanced_flask_app.py  enhanced_websocket_handler.py  frontend_debug_fixes.js  setup_websocket_trading.py  trading_websocket_integration.py  websocket_client.js  websocket_server.py  websocket_trading_bot.py
tests/: README.md  (+39 more)
(+598 files in other folders)
